--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -18,4 +18,4 @@ jobs:
           python-version: ${{ matrix.python-version }}
     - name: Run tests
       run: |
-          python -m unittest discover -s tests -p '*_test.py'
+          python -m unittest discover
