--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -14,8 +14,11 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       uses: actions/setup-python@v2
+      run: |
+        pip install --upgrade pip
+        pip install -r requirements.txt
       with:
           python-version: ${{ matrix.python-version }}
     - name: Run tests
       run: |
-          python -m unittest discover
+          pytest
