--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -14,6 +14,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       uses: actions/setup-python@v2
+    - name: Install requirements
       run: |
         pip install --upgrade pip
         pip install -r requirements.txt
